# corn-leaf-desease-project

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LOCAL.md  Makefile  README.md  data  package-lock.json  package.json  pyproject.toml  requirements.txt  test_loader_integration.py  tsconfig.json
config/: dataset.yaml
docs/: healthy.md  index.md
docs/.vitepress/: config.mts
docs/es/: index.md
fiftyone/: delete_datasets.py  fifty.py  import_datasets.py
notebooks/: 01_eda.ipynb  Doctor_maiz large.ipynb  Doctor_maiz.ipynb  Doctor_maiz_small_v1.ipynb  Doctor_maiz_small_v2.ipynb  EDA_Doctor_Maiz.ipynb
notebooks/modelo_tflite/: doctor_maiz_optimizado.tflite  mobilenetv3_large.tflite  mobilenetv3_small_v2.tflite
notebooks/modelos_locales/: etiquetas_maiz.txt
public/: perfil-proyecto.md
scripts/: create_splits.py  delete_duplicates_northern_corn_leaf_blight_real.py  download_datasets.sh  move_multicrop_maize_rust.py  move_rename_common_rust_multicrop.py  move_rename_common_rust_real.py  rename_common_rust.py  rename_healthy_real.py  rename_northern_corn_leaf_blight_real.py  reorder_maize_in_field.py  sort_maize_by_disease.py  train.py
scripts/aphids_pest/: rename_aphids_maize_africa.py
scripts/common_rust/: move_rename_common_rust_maize_desease.py
scripts/corn_leaf_roboflow/: organize_corn_leaf_roboflow.py
scripts/dataset/: download_dataset.py  upload_to_hf.py
scripts/fall_armyworm/: fix_fall_armyworm_remove_damage.py  rename_fall_armyworm_maize_africa.py  rename_fall_armyworm_multi_desease.py
src/: config.py
(+93 files in other folders)
