[project]
name = "corn-leaf-disease"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2",
    "torchvision>=0.17",
    "Pillow>=10.0",
    "pandas>=2.0",
    "scikit-learn>=1.4",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev      = ["ipykernel", "jupyterlab", "matplotlib", "seaborn", "ruff"]
analysis = ["imagededup", "fiftyone", "imageio", "mongoengine", "motor"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
